# solar-registry

./: .gitignore  README.md  check.sh  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
src/solar_registry/: cli.py
src/solar_registry/commands/: generator.py  meta_merger.py
src/solar_registry/model/: legacy.py  test_tool.py
src/solar_registry/service/: cos_sync.py  cos_uploader.py  generator.py  path.py  pr_generator.py  testtool.py  validator.py
src/solar_registry/util/: file.py
tests/: test_cos_sync.py  test_generator.py  test_merger.py  test_pr_generator.py  test_testtool.py
tests/testdata/legacy/: testtool.yaml
tests/testdata/pytest/: testtool.yaml
