[project]
name = "solar-registry"
version = "0.3.0"
description = "Generate and merge meta data for testsolar test tools"
authors = [
    { name = "asiazhang", email = "asiazhang2002@gmail.com" },
]
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.5.3",
    "typer>=0.12.3",
    "pyyaml>=6.0.1",
    "retry>=0.9.2",
    "loguru>=0.7.2",
    "coscmd>=1.8.6.34",
]
requires-python = ">=3.7"
readme = "README.md"
license = { text = "MIT" }

urls = { repository = "https://github.com/OpenTestSolar/solar-registry" }
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

[project.scripts]
solar-registry = "solar_registry.cli:cli_entry"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.4.1",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.4",
    "types-PyYAML>=6.0.12.12",
    "types-requests>=2.31.0.20231231",
    "types-retry>=0.9.9.4",
]

[tool.ruff]
target-version = "py37"